Added the target branch that argo will observe to promote changes

--- a/envs/default/default.yaml
+++ b/envs/default/default.yaml
@@ -13,4 +13,5 @@ spec:
     directory:
       recurse: true
     path: envs/default
+    targetRevision: main
     repoURL: https://github.com/juanpio/ArgoCD
