changed generatedName from metadata to name

--- a/envs/default/default.yaml
+++ b/envs/default/default.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  generateName: default
+  name: default
   namespace: argocd
 spec:
   destination:
