--- a/envs/default/apps/redis.yaml
+++ b/envs/default/apps/redis.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: argocd
 spec:
   destination:
-    namespace: argocd
+    namespace: redis
     server: https://kubernetes.default.svc
   project: default
   source:
