--- a/envs/default/apps/redis.yaml
+++ b/envs/default/apps/redis.yaml
@@ -13,6 +13,11 @@ spec:
     chart: redis
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 18.9.1
+    helm:
+      valueFiles:
+        values: |
+          replica:
+            replicaCount: 4
   syncPolicy:
     automated:
       prune: true
